@@ -1148,3 +1148,4 @@
 		Memory overrun fix to symbol.c for Bluespec add from 3.3.11.
 		Added --restore command line option to gtkwave.
 3.3.30 31dec11	Updated ./configure to add --disable-mime-update flag.
+		Fix --optimize for --restore.
